compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__blocks__block.snap
---
source: compiler-core/src/nix/tests/blocks.rs
expression: "\nfn go() {\n  let x = {\n    1\n    2\n  }\n  x\n}\n"
---
let go = {}: let x = let _''0 = 1; in 2; in x; in {}
