compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__blocks__left_operator_sequence.snap
---
source: compiler-core/src/nix/tests/blocks.rs
expression: "\nfn go() {\n  1 == {\n    1\n    2\n  }\n}\n"
---
let go = {}: 1 == (let _''0 = 1; in 2); in {}
