compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__blocks__nested_multiexpr_blocks_with_pipe.snap
---
source: compiler-core/src/nix/tests/blocks.rs
expression: "\nfn add1(a) {\n  a + 1\n}\nfn go() {\n  let x = {\n    1\n    {\n      2\n      3 |> add1\n    } |> add1\n  }\n  x\n}\n"
---
let
  add1 = a: a + 1;
  
  go =
    let
      x =
        let
          _''0 = 1;
        in
          let
            _pipe = let _''1 = 2; in let _pipe = 3; in add1 _pipe;
          in add1 _pipe;
    in x;
in {}
