compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__blocks__nested_multiexpr_non_ending_blocks.snap
---
source: compiler-core/src/nix/tests/blocks.rs
expression: "\nfn go() {\n  let x = {\n    1\n    {\n      2\n      3\n    }\n    4\n  }\n  x\n}\n"
---
let go = {}: let x = let _''0 = 1; _''1 = let _''1 = 2; in 3; in 4; in x; in {}
