compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__blocks__right_operator_sequence.snap
---
source: compiler-core/src/nix/tests/blocks.rs
expression: "\nfn go() {\n  {\n    1\n    2\n  } == 1\n}\n"
---
let go = {}: (let _'0 = 1; in 2) == 1; in {}
